# logpush-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
logpush_mcp/: log_parser.py  r2_client.py  server.py  types.py
src/logpush_mcp/: __init__.py  r2_client.py  server.py
