[project]
name = "logpush-mcp"
version = "0.1.0"
description = "MCP server for reading Cloudflare Workers logpush data from R2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
]

[project.scripts]
logpush-mcp = "logpush_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
